--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <section>
                 <h3>Unfinished Business from the Presvious Meeting</h3>
                 <p>If you have missed our previous meeting you can find a <strong>audio recording</strong> of it below.</p>
-                <audio controls src="assets/Donda Chant.mp3"></audio>
+                <audio controls src="assets/Donda.mp3"></audio>
             </section>
 
             <hr>
@@ -89,7 +89,7 @@
                 <p>Since this is our first brainstorm session here are some tips and tricks to how to brainstorm.</p>
                 <img src="https://www.elevatemybrand.com/uploads/html/images/Brainstorm%20image.png" alt="tips">
                 <p>Here is a small motivational video.</p>
-                <video controls src="assets/yt5s.com-I'm still gonna send it-(480p).mp4"></video>
+                <video controls src="assets/sendit.mp4"></video>
             </section>
 
             <hr>
