--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="index.css">
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,12 +11,25 @@
     <title>Pomodoro Timer First Brainstorm</title>
 </head>
 
+<style>
+    /*body{
+        background-color: #f4e9f7;
+        
+    }*/
+    h1 {
+        color: rgb(151, 13, 163);
+    }
+    p {
+        color: #cc0099;
+    }
+</style>
+
 <body>
     <header>
         <h1>Pomodoro Timer First Brainstorm</h1>
         <h2>Brainstorming</h2>
         <h3>October 1, 2021</h3>
-        <hr>
+
         <nav>
             <h4>Navigation Menu</h4>
             <ol>
@@ -27,13 +41,12 @@
             </ol>
         </nav>
     </header>
-    <hr>
 
     <main>
 
 
         <a id="attendance"></a>
-        <section>
+        <section id="attend">
             <h3>Attendance List</h3>
 
             <details>
@@ -63,9 +76,10 @@
 
         <a id="agenda"></a>
         <div>
-            <section>
+            <section id="agen">
                 <h3>Agenda</h3>
-                <p>Get to know your <span>teammates</span>, make a plan for the upcoming meetings, assign roles, and
+                <p>Get to know your <span style="color: green;">teammates</span>, make a plan for the upcoming meetings,
+                    assign roles, and
                     make a proper schedule for the rest of the quarter. Click <a
                         href="https://www.lucidchart.com/pages/landing/mind-map-software?utm_source=google&utm_medium=cpc&utm_campaign=_chart_en_unitedstates_desktop_nb_x_exact&km_CPC_CampaignId=59539697&km_CPC_AdGroupID=16655488937&km_CPC_Keyword=mind%20mapping&km_CPC_MatchType=e&km_CPC_ExtensionID=&km_CPC_Network=g&km_CPC_AdPosition=&km_CPC_Creative=442345702755&km_CPC_TargetID=aud-552508845282:kwd-89115119&km_CPC_Country=9061210&km_CPC_Device=c&km_CPC_placement=&km_CPC_target=&mkwid=snAwmQuvR_pcrid_442345702755_pkw_mind%20mapping_pmt_e_pdv_c_slid__pgrid_16655488937_ptaid_aud-552508845282:kwd-89115119_&gclid=EAIaIQobChMInp617f6u8wIVYw2tBh0LTQE6EAAYASAAEgKmGvD_BwE">here</a>
                     to map your ideas. </p>
@@ -75,7 +89,7 @@
 
 
         <a id="unfinished"></a>
-        <section>
+        <section id="unfin">
             <h3>Unfinished Business from the Presvious Meeting</h3>
             <p>If you have missed our previous meeting you can find a <strong>audio recording</strong> of it below.</p>
             <audio controls src="assets/Donda.mp3"></audio>
@@ -84,7 +98,7 @@
         <hr>
 
         <a id="new"></a>
-        <section>
+        <section id="fin">
             <h3>New Business</h3>
             <p>Since this is our first brainstorm session here are some tips and tricks to how to brainstorm.</p>
             <img src="https://www.elevatemybrand.com/uploads/html/images/Brainstorm%20image.png" alt="tips">
@@ -95,7 +109,7 @@
         <hr>
 
         <a id="comments"></a>
-        <section>
+        <section id="com">
             <h3>Miscellanous Comments/ Questions/ Concerns</h3>
             <form>
                 <label for="name">Enter your name:</label>
@@ -144,9 +158,37 @@
 
                 <br>
 
-                <button type="button">Submit</button>
+                <button class="btn" type="button">Submit</button>
             </form>
         </section>
+
+
+        <div class="container1">
+            <div class="box1">
+                <h3>Spiderman</h3>
+                <img src="https://photos.smugmug.com/Marvels-Spider-man/i-9c5SpjF/0/55ea87ba/L/a-for-air-selfie_43290359940_o-L.png"
+                    alt="spidey">
+            </div>
+            <div class="box2">
+                <h3>Thor</h3>
+                <img src="https://imgc.allpostersimages.com/img/posters/thor-marvel-avengers-assemble-lifesize-standup_u-L-F5S14J0.jpg?artHeight=900&artPerspective=n&artWidth=900"
+                    alt="thor">
+            </div>
+            <div class="box3">
+                <h3>Ant man</h3>
+                <img src="https://www.wallpapertip.com/wmimgs/100-1001846_download-wallpaper-data-src-vertical-ant-man-wallpapers.jpg"
+                    alt="antman">
+            </div>
+        </div>
+
+        <p>Upcoming marvel shows/movies</p>
+        <div class="grid-container">
+            <div>Spiderman: No Way Home</div>
+            <div>Thor: Love and Thunder</div>
+            <div>Hawkeye</div>
+            <div>Eternals</div>
+            <div>She-Hulk</div>
+        </div>
 
     </main>
 
