--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body>
     <header>
-        <h1>Pomodoro Timer First Brainstorm</h1>
+        <h1>Pomodoro Timer First Meeting</h1>
         <h2>Brainstorming</h2>
         <h3>October 1, 2021</h3>
 
@@ -102,7 +102,7 @@
             <h3>New Business</h3>
             <p>Since this is our first brainstorm session here are some tips and tricks to how to brainstorm.</p>
             <img src="https://www.elevatemybrand.com/uploads/html/images/Brainstorm%20image.png" alt="tips">
-            <p>Here is a small motivational video.</p>
+            <p class="motiv">Here is a small motivational video.</p>
             <video controls src="assets/sendit.mp4"></video>
         </section>
 
@@ -193,7 +193,7 @@
     </main>
 
     <footer>
-        <p><b>Yay! You are all caught up now</b></p>
+        <p><b>Yay!</b> You are all caught up now</p>
     </footer>
 </body>
 
